photoswipe skin implemented

--- a/src/scss/widgets/_photoswipe-addon.scss
+++ b/src/scss/widgets/_photoswipe-addon.scss
@@ -1,6 +1,7 @@
 $thumbs-list-height: 150px;
 $thumbs-list-padding: 15px;
 $thumbs-list-background: blue;
+$thumbs-icon-color: #ffffff;
 $thumbs-border-size: 2px;
 $thumbs-border-style: solid;
 $thumbs-border-color: gray;
