--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,12 +3,16 @@
 // Compass
 @import "compass";
 
+// Fontawesome
+@include font-face('FontAwesome', font-files('fontawesome-webfont.woff2', 'fontawesome-webfont.woff', 'fontawesome-webfont.ttf', 'fontawesome-webfont.svg'), 'fontawesome-webfont.eot');
+@import "widgets/fontawesome";
+
 // Photoswipe core
 @import "widgets/photoswipe/main-settings";
 @import "widgets/photoswipe/main";
 
-// Photoswipe default skin
-// @import "widgets/photoswipe/default-skin/default-skin";
-
 // Photoswipe Addon (custom styles)
+@import "widgets/photoswipe-addon-settings";
 @import "widgets/photoswipe-addon";
+// @import "widgets/photoswipe-addon-skin";
+@import "widgets/photoswipe/default-skin/default-skin";
