--- a/src/scss/widgets/_photoswipe-addon.scss
+++ b/src/scss/widgets/_photoswipe-addon.scss
@@ -1,12 +1,3 @@
-$thumbs-list-height: 150px;
-$thumbs-list-padding: 15px;
-$thumbs-list-background: blue;
-$thumbs-icon-color: #ffffff;
-$thumbs-border-size: 2px;
-$thumbs-border-style: solid;
-$thumbs-border-color: gray;
-$thumbs-active-border-color: lime;
-
 * {
     @include box-sizing(border-box);
     &:before,
@@ -22,23 +13,33 @@ $thumbs-active-border-color: lime;
     }
 }
 
+.pswp__bg {
+    opacity: $overlay-bg-opacity !important;
+    background-color: $overlay-bg;
+}
+
 .pswp__thumbs {
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-    overflow-x: auto;
     overflow-y: hidden;
+    overflow-x: auto;
+    border: {
+        top: {
+            width: $thumbs-list-border-width;
+            style: $thumbs-list-border-style;
+            color: $thumbs-list-border-color;
+        }
+    }
     background: {
         color: $thumbs-list-background;
     }
     ul {
-        //reset begin
+        @include pie-clearfix;
         padding: 0;
         margin: 0;
         list-style: none;
-        //reset end
-        @include pie-clearfix;
         white-space: nowrap;
         height: 100%;
     }
@@ -50,7 +51,7 @@ $thumbs-active-border-color: lime;
         }
         img {
             display: block;
-            height: $thumbs-list-height - (($thumbs-border-size * 2) + ($thumbs-list-padding * 2));
+            height: $thumbs-list-height - (($thumbs-border-width * 2) + ($thumbs-list-padding * 2));
         }
         &:first-child {
             margin: {
@@ -58,7 +59,7 @@ $thumbs-active-border-color: lime;
             }
         }
         border: {
-            size: $thumbs-border-size;
+            width: $thumbs-border-width;
             style: $thumbs-border-style;
             color: $thumbs-border-color;
         }
