thumnail options extended, thumbnail styling, zoom animation switch

--- a/src/scss/widgets/_photoswipe-addon-skin.scss
+++ b/src/scss/widgets/_photoswipe-addon-skin.scss
@@ -388,7 +388,7 @@ a.pswp__share--download {
 
 	.pswp__preloader__icn {
 		/* We use .gif in browsers that don't support CSS animation */
-		background: url(#{$pswp__assets-path}preloader.gif) 0 0 no-repeat;
+		background: red;
 	}
 }
 
