--- a/src/scss/widgets/_photoswipe-addon.scss
+++ b/src/scss/widgets/_photoswipe-addon.scss
@@ -14,63 +14,74 @@
 }
 
 .pswp__bg {
-    opacity: $overlay-bg-opacity !important;
     background-color: $overlay-bg;
 }
 
-.pswp__thumbs {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    overflow-y: hidden;
-    overflow-x: auto;
-    border: {
-        top: {
-            width: $thumbs-list-border-width;
-            style: $thumbs-list-border-style;
-            color: $thumbs-list-border-color;
-        }
-    }
-    background: {
-        color: $thumbs-list-background;
-    }
-    ul {
-        @include pie-clearfix;
-        padding: 0;
-        margin: 0;
-        list-style: none;
-        white-space: nowrap;
-        height: 100%;
-    }
-    li {
-        display: inline-block;
-        cursor: pointer;
-        margin: {
-            left: 4px;
-        }
-        img {
-            display: block;
-            height: $thumbs-list-height - (($thumbs-border-width * 2) + ($thumbs-list-padding * 2));
-        }
-        &:first-child {
-            margin: {
-                left: 0;
+.pswp__has-thumbs {
+    .pswp__thumbs {
+        @include transition(opacity 0.3s linear, visibility 0.3s linear);
+        @include opacity(0);
+        visibility: hidden;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        overflow-y: hidden;
+        overflow-x: auto;
+        border: {
+            top: {
+                width: $thumbs-list-border-width;
+                style: $thumbs-list-border-style;
+                color: $thumbs-list-border-color;
             }
         }
-        border: {
-            width: $thumbs-border-width;
-            style: $thumbs-border-style;
-            color: $thumbs-border-color;
+        background: {
+            color: $thumbs-list-background;
         }
-    }
-    .pswp__thumb-active {
-        border: {
-            color: $thumbs-active-border-color;
+        ul {
+            @include pie-clearfix;
+            padding: 0;
+            margin: 0;
+            list-style: none;
+            white-space: nowrap;
+            height: 100%;
         }
+        li {
+            display: inline-block;
+            cursor: pointer;
+            margin: {
+                left: 4px;
+            }
+            img {
+                display: block;
+                height: $thumbs-list-height - (($thumbs-border-width * 2) + ($thumbs-list-padding * 2));
+            }
+            &:first-child {
+                margin: {
+                    left: 0;
+                }
+            }
+            border: {
+                width: $thumbs-border-width;
+                style: $thumbs-border-style;
+                color: $thumbs-border-color;
+            }
+        }
+        .pswp__thumb-active {
+            border: {
+                color: $thumbs-active-border-color;
+            }
+        }
+        .pswp__thumbs-list {
+            padding: $thumbs-list-padding;
+            height: $thumbs-list-height;
+        }
+
     }
-    .pswp__thumbs-list {
-        padding: $thumbs-list-padding;
-        height: $thumbs-list-height;
+    &.pswp__thumbs--visible {
+        .pswp__thumbs {
+            @include opacity(1);
+            visibility: visible;
+        }
     }
 }
