fullscreen resize function

--- a/src/scss/widgets/_photoswipe-addon-settings.scss
+++ b/src/scss/widgets/_photoswipe-addon-settings.scss
@@ -32,7 +32,7 @@ $caption-small-font-size: 12px;
 $caption-small-font-color: #cccccc;
 
 // thumbnails
-$thumbs-list-height: 150px;
+$thumbs-list-height: 20%;
 $thumbs-list-padding: 15px;
 $thumbs-list-background: #008c7d;
 $thumbs-list-border-width: 1px;
