css bugfixes and bower.json refactored

--- a/src/scss/widgets/_photoswipe-addon-skin.scss
+++ b/src/scss/widgets/_photoswipe-addon-skin.scss
@@ -247,9 +247,9 @@
 }
 
 /* increase size of share links on touch devices */
-.pswp--touch .pswp__share-tooltip a {
-	padding: $share-link-touch-padding;
-}
+// .pswp--touch .pswp__share-tooltip a {
+// 	padding: $share-link-touch-padding;
+// }
 
 a.pswp__share--facebook {
 	&:after {
