--- a/src/scss/demo.scss
+++ b/src/scss/demo.scss
@@ -1,5 +1,22 @@
+@charset "utf-8";
+
+// Compass
 @import "compass";
 
+// Fontawesome
+@include font-face('FontAwesome', font-files('fontawesome-webfont.woff2', 'fontawesome-webfont.woff', 'fontawesome-webfont.ttf', 'fontawesome-webfont.svg'), 'fontawesome-webfont.eot');
+@import "widgets/fontawesome";
+
+// Photoswipe core
+@import "widgets/photoswipe/main-settings";
+@import "widgets/photoswipe/main";
+
+// Photoswipe Addon (custom styles)
+@import "widgets/photoswipe-addon-settings";
+@import "widgets/photoswipe-addon";
+@import "widgets/photoswipe-addon-skin";
+
+// Demo Styles
 .gallery {
 	@include pie-clearfix;
 	> a {
