video integration and styling

--- a/src/scss/widgets/_photoswipe-addon-settings.scss
+++ b/src/scss/widgets/_photoswipe-addon-settings.scss
@@ -71,3 +71,13 @@ $share-twitter-link-color-hover: #ffffff;
 $share-pinterest-link-icon: $fa-var-pinterest;
 $share-pinterest-link-bg: #cb2027;
 $share-pinterest-link-color-hover: #ffffff;
+
+// video preview
+$video-icon: $fa-var-play-circle-o;
+$video-icon-size: 100px;
+$video-icon-color: #ffffff;
+$video-icon-color-hover: #008c7d;
+
+$video-thumb-icon: $fa-var-play-circle-o;
+$video-thumb-icon-size: 30px;
+$video-thumb-icon-color: #ffffff;
